samples/_failures_safe/1761443473_562443_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8df99fb9.c: In function ‘main’:
./samples/SAFE/__tmp_8df99fb9.c:164:9: error: expected expression at end of input
  164 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_8df99fb9.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8df99fb9.c:164:9: error: expected declaration or statement at end of input
